kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anurag-sh-route
  namespace: anurag-sh
spec:
  hostnames:
    - anurag.sh
    - anurag.id.au
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - name: anurag-sh
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
