kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anurag-sh
  namespace: anurag-sh
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "3"
    nginx.ingress.kubernetes.io/limit-rpm: "30"
    nginx.ingress.kubernetes.io/limit-connections: "5"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: anurag.id.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anurag-sh
                port:
                  number: 80
    - host: anurag.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anurag-sh
                port:
                  number: 80
  tls:
    - secretName: anurag-sh-tls
      hosts:
        - anurag.sh
        - anurag.id.au
